// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationProvider > renders ai_approval notification type correctly 1`] = `
<div>
  <button
    type="button"
  >
    Trigger
  </button>
  <div
    aria-atomic="false"
    aria-live="polite"
    role="log"
    style="position: fixed; top: 16px; right: 16px; z-index: 9999; display: flex; flex-direction: column; gap: 8px;"
  >
    <button
      aria-label="Dismiss: Test ai_approval"
      style="padding: 12px 16px; border-radius: 8px; border: medium; background: var(--accent-yellow, #e0af68); color: rgb(26, 27, 38); max-width: 400px; box-shadow: 0 4px 12px rgba(0,0,0,0.3); cursor: pointer; text-align: left; font: inherit;"
      type="button"
    >
      <div
        style="font-weight: 600; font-size: 14px;"
      >
        Test ai_approval
      </div>
      <div
        style="font-size: 12px; opacity: 0.9; margin-top: 4px;"
      >
        Message for ai_approval
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationProvider > renders ai_completion notification type correctly 1`] = `
<div>
  <button
    type="button"
  >
    Trigger
  </button>
  <div
    aria-atomic="false"
    aria-live="polite"
    role="log"
    style="position: fixed; top: 16px; right: 16px; z-index: 9999; display: flex; flex-direction: column; gap: 8px;"
  >
    <button
      aria-label="Dismiss: Test ai_completion"
      style="padding: 12px 16px; border-radius: 8px; border: medium; background: var(--accent-green, #9ece6a); color: rgb(26, 27, 38); max-width: 400px; box-shadow: 0 4px 12px rgba(0,0,0,0.3); cursor: pointer; text-align: left; font: inherit;"
      type="button"
    >
      <div
        style="font-weight: 600; font-size: 14px;"
      >
        Test ai_completion
      </div>
      <div
        style="font-size: 12px; opacity: 0.9; margin-top: 4px;"
      >
        Message for ai_completion
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationProvider > renders error notification type correctly 1`] = `
<div>
  <button
    type="button"
  >
    Trigger
  </button>
  <div
    aria-atomic="false"
    aria-live="polite"
    role="log"
    style="position: fixed; top: 16px; right: 16px; z-index: 9999; display: flex; flex-direction: column; gap: 8px;"
  >
    <button
      aria-label="Dismiss: Test error"
      style="padding: 12px 16px; border-radius: 8px; border: medium; background: var(--bg-tertiary, #24283b); color: var(--text-primary, #c0caf5); max-width: 400px; box-shadow: 0 4px 12px rgba(0,0,0,0.3); cursor: pointer; text-align: left; font: inherit;"
      type="button"
    >
      <div
        style="font-weight: 600; font-size: 14px;"
      >
        Test error
      </div>
      <div
        style="font-size: 12px; opacity: 0.9; margin-top: 4px;"
      >
        Message for error
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationProvider > renders info notification type correctly 1`] = `
<div>
  <button
    type="button"
  >
    Trigger
  </button>
  <div
    aria-atomic="false"
    aria-live="polite"
    role="log"
    style="position: fixed; top: 16px; right: 16px; z-index: 9999; display: flex; flex-direction: column; gap: 8px;"
  >
    <button
      aria-label="Dismiss: Test info"
      style="padding: 12px 16px; border-radius: 8px; border: medium; background: var(--bg-tertiary, #24283b); color: var(--text-primary, #c0caf5); max-width: 400px; box-shadow: 0 4px 12px rgba(0,0,0,0.3); cursor: pointer; text-align: left; font: inherit;"
      type="button"
    >
      <div
        style="font-weight: 600; font-size: 14px;"
      >
        Test info
      </div>
      <div
        style="font-size: 12px; opacity: 0.9; margin-top: 4px;"
      >
        Message for info
      </div>
    </button>
  </div>
</div>
`;
